--- a/index copy 2.html
+++ b/index copy 2.html
@@ -1,248 +1,163 @@
-<!doctype html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite App</title>
-  <!-- Google Font: Source Sans Pro -->
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
-  <!-- Font Awesome -->
-  <link rel="stylesheet" href="plugins/fontawesome-free/css/all.min.css">
-  <!-- Ionicons -->
-  <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-  <!-- Tempusdominus Bootstrap 4 -->
-  <link rel="stylesheet" href="./public/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css">
-  <!-- Select2 -->
-  <link rel="stylesheet" href="./plugins/select2/css/select2.min.css">
-  <link rel="stylesheet" href="./plugins/select2-bootstrap4-theme/select2-bootstrap4.min.css">
-  <!-- iCheck -->
-  <link rel="stylesheet" href="./public/plugins/icheck-bootstrap/icheck-bootstrap.min.css">
-  <!-- JQVMap -->
-  <link rel="stylesheet" href="./public/plugins/jqvmap/jqvmap.min.css">
-  <!-- Theme style -->
-  <link rel="stylesheet" href="./public/dist/css/adminlte.min.css">
-  <!-- overlayScrollbars -->
-  <link rel="stylesheet" href="./public/plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
-  <!-- Daterange picker -->
-  <link rel="stylesheet" href="./public/plugins/daterangepicker/daterangepicker.css">
-  <!-- summernote -->
-  <link rel="stylesheet" href="./public//plugins/summernote/summernote-bs4.min.css">
-</head>
-
-<body class="sidebar-mini layout-fixed">
-
-
-
-  <div class="wrapper">
-    <aside class="main-sidebar">
-
-
-      <!-- Sidebar -->
-      <div
-        class="sidebar os-host os-theme-light os-host-overflow os-host-overflow-y os-host-resize-disabled os-host-transition os-host-scrollbar-horizontal-hidden">
-        <div class="os-resize-observer-host observed">
-          <div class="os-resize-observer" style="left: 0px; right: auto;"></div>
-        </div>
-        <!-- <div class="os-size-auto-observer observed" style="height: calc(100% + 1px); float: left;">
-          <div class="os-resize-observer"></div>
-        </div> -->
-        <!-- <div class="os-content-glue" style="margin: 0px -8px; width: 249px; height: 262px;"></div> -->
-        <div class="os-padding">
-          <div class="os-viewport os-viewport-native-scrollbars-invisible" style="overflow-y: scroll;">
-            <div class="os-content px-3">
-              <a class="pl-3 mt-4 d-block _icon-sidebar-arrow " data-widget="pushmenu" href="#" role="button"></a>
-              <!-- Sidebar user (optional) -->
-              <div class="user-panel mt-4  mb-4 d-flex align-items-center">
-                <div class="image">
-                  <img src="./src/assets/img/avatar.png" class="img-rounded " alt="User Image">
-                </div>
-                <div class="info d-flex align-items-center">
-                  <a href="#" class="d-block ">Мой профиль</a>
-                </div>
-              </div>
-
-              <!-- SidebarSearch Form -->
-              <div class="form-inline">
-                <div class="input-group" data-widget="sidebar-search">
-                  <input class="form-control form-control-sidebar" type="search" placeholder="Поиск"
-                    aria-label="Search">
-                  <div class="input-group-append">
-                    <button class="btn btn-sidebar _icon-search">
-
-                    </button>
-                  </div>
-                </div>
-                <div class="sidebar-search-results">
-                  <div class="list-group"><a href="#" class="list-group-item">
-                      <div class="search-title"><strong class="text-light"></strong>N<strong
-                          class="text-light"></strong>o<strong class="text-light"></strong> <strong
-                          class="text-light"></strong>e<strong class="text-light"></strong>l<strong
-                          class="text-light"></strong>e<strong class="text-light"></strong>m<strong
-                          class="text-light"></strong>e<strong class="text-light"></strong>n<strong
-                          class="text-light"></strong>t<strong class="text-light"></strong> <strong
-                          class="text-light"></strong>f<strong class="text-light"></strong>o<strong
-                          class="text-light"></strong>u<strong class="text-light"></strong>n<strong
-                          class="text-light"></strong>d<strong class="text-light"></strong>!<strong
-                          class="text-light"></strong></div>
-                      <div class="search-path"></div>
-                    </a></div>
-                </div>
-              </div>
-
-              <nav class="mt-4">
-                <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu"
-                  data-accordion="false">
-                  <!-- Add icons to the links using the .nav-icon class
-                       with font-awesome or any other icon font library -->
-
-                  <li class="nav-item">
-                    <a href="#" class="nav-link font-weight-bold _icon-dashboard">
-                      <p>
-                        Дашборд
-                      </p>
-                    </a>
-
-                  </li>
-                  <li class="nav-item">
-                    <a href="#" class="nav-link font-weight-bold _icon-priceList">
-                      <p>
-                        Прайс-лист
-                      </p>
-                    </a>
-                  </li>
-                  <li class="nav-item">
-                    <a href="#" class="nav-link font-weight-bold _icon-client">
-                      <p>
-                        Клиенты
-                      </p>
-                    </a>
-                  </li>
-                  <li class="nav-item">
-                    <a href="#" class="nav-link font-weight-bold _icon-pattern">
-                      <p>
-                        Шаблоны
-                      </p>
-                    </a>
-                  </li>
-                </ul>
-              </nav>
-    </aside>
-    <div class="content-wrapper p-4">
-      <h1 class="big-title">Создать смету</h1>
-      <div class="container-content">
-        <h2 class="middle-title">Информация</h2>
-        <div class="list-input">
-          <div class="list-input__item">
-            <label class="list-input__label" for="client">Клиент</label>
-            <div class="list-input__wrraper-input">
-              <select id="client" class="list-input__select  select2" name="Клиент">
-                <option></option>
-                <option>Старк Санса Недовна</option>
-                <option>Старк Бран Недовна</option>
-                <option>Старк Джон Недовна</option>
-                <option>Старк Ария Недовна</option>
-                <option>Баратеон Станис Стеффович</option>
-
-              </select>
-            </div>
-            <button type="button" class="list-input__add-btn add-btn"></button>
-          </div>
-          <div class="list-input__item">
-            <label for="manager" class="list-input__label">Менеджер</label>
-            <div class="list-input__wrraper-input">
-              <select id="manager" class="list-input__select  select2" name="Менеджер">
-                <option></option>
-                <option>Дмитрий</option>
-                <option>Наталья</option>
-                <option>Дмитрий(Митя)</option>
-              </select>
-            </div>
-            <button type="button" class="list-input__add-btn add-btn"></button>
-          </div>
-          <div class="list-input__item">
-            <label for="engineer" class="list-input__label">Инженер</label>
-            <div class="list-input__wrraper-input">
-              <select id="engineer" class="list-input__select  select2" name="Инженер">
-                <option></option>
-                <option>Биба</option>
-                <option>Боба</option>
-
-              </select>
-            </div>
-            <button type="button" class="list-input__add-btn add-btn"></button>
-          </div>
-          <div class="list-input__item">
-            <label for="engineer" class="list-input__label">Дата</label>
-            <div class="list-input__wrraper-input">
-
-              <!-- <input name="dates" class="form-control datetimepicker-input" data-target="#reservationdatetime"> -->
-
-              <div class="form-group">
-                <label>Date:</label>
-                <div class="input-group date" id="reservationdate" data-target-input="nearest">
-                  <input type="text" class="form-control datetimepicker-input" data-target="#reservationdate">
-                  <div class="input-group-append" data-target="#reservationdate" data-toggle="datetimepicker">
-                    <div class="input-group-text"><i class="fa fa-calendar"></i></div>
-                  </div>
-                </div>
+<li class="todo-list__item d-flex  ">
+  <div class="container-content">
+    <div class="todo-list__contetn">
+      <span class="handle  _icon-darag">
+      </span>
+      <div class="todo-list__accordion accordion  card collapsed-card">
+        <div class="text-left  accordion__header collapsed middle-title">
+          <button type="button" class="accordion__btn" data-card-widget="collapse"></button>
+          <label class="accordion__checkbox checkbox">
+            <input hidden type="checkbox" class="checkbox__input" name="checkbox-lvl-1">
+          </label>
+          <div class="accordion__header-content">
+            <div class="accordion__name"> Водоснабжение</div>
+            <div class="accordion__select ">
+              <label class="accordion__name-select">Статус</label>
+              <div class="select-status">
+                <select class="select2  select2-hidden-accessible" name="Статус" style="width: 100%;"
+                  data-select2-id="select-status-" tabindex="-1" aria-hidden="true">
+                  <option value="Выполнено" class="select-status__completed">Выполнено</option>
+                  <option selected value="В работе" class="select-status__in-progress">В работе</option>
+                  <option value="Отменено" class="select-status__cancelled">Отменено</option>
+                  <option value="Отложено" class="select-status__postponed">Отложено</option>
+                </select>
               </div>
             </div>
-
+            <div class="accordion__del-btn">
+              <span role="button" class=" btn-del-big"><span>Удалить</span></span>
+            </div>
           </div>
         </div>
+
+
+
+        <div class="accordion__body card-body">
+          <!-- Этапы работы -->
+          <ul class="todo-list overflow-hidden mt-3" data-widget="todo-list">
+            <li class="todo-list__item ">
+              <div class="todo-list__contetn">
+                <span class="handle  _icon-darag">
+                </span>
+                <div class="todo-list__accordion accordion card collapsed-card">
+                  <!-- Начала Позиций  -->
+
+                  <div class=" text-left accordion__header middle-title">
+                    <button type="button" class="accordion__btn" data-card-widget="collapse"></button>
+                    <label class="accordion__checkbox checkbox">
+                      <input hidden type="checkbox" class="checkbox__input" name="checkbox-lvl-2">
+                    </label>
+                    <div class="accordion__header-content">
+                      <div class="accordion__name very-small accordion__name_small-text"> Работы,
+                        оборудование и
+                        материалы
+                        (Водоснабжение)</div>
+                      <div class="accordion__del-btn accordion__del-btn_small"><span role="button"
+                          class=" btn-del-small"></span></div>
+                    </div>
+                  </div>
+                  <div class="accordion__body card-body ">
+                    <ul class=" accordion__list list-accordion">
+                      <li class=" list-accordion__head">
+                        <div></div>
+                        <div><label class="checkbox">
+                            <input hidden="" type="checkbox" class="checkbox__input" name="checkbox-lvl-3">
+                          </label></div>
+                        <div>№</div>
+                        <div>Арт.</div>
+                        <div>Наименование работ</div>
+                        <div>Ед.
+                          изм.</div><span>Кол-во.</span><span>Цена р.</span>
+                        <div>Сумма р.</div>
+                        <div></div>
+                      </li>
+                      <li class="list-accordion__body">
+                        <ul class="todo-list">
+                          <li class="list-accordion__item">
+                            <div class="handle _icon-darag"></div>
+                            <div><label class="checkbox">
+                                <input hidden="" type="checkbox" class="checkbox__input" name="checkbox-lvl-3">
+                              </label></div>
+                            <div>1</div>
+                            <div>01232</div>
+                            <div class="list-accordion__name">Земляные работы (копка
+                              траншеи
+                              300х1500мм с обратной засыпкой и укладка трубы) до Бани
+                              работ</div>
+                            <div>15</div>
+                            <div>15</div>
+                            <div>1 230 000</div>
+                            <div>6 150
+                              000</div>
+                            <div><button type="button" class="btn-del-small"></button></div>
+                          </li>
+                          <li class="list-accordion__item">
+                            <div class="handle _icon-darag"></div>
+                            <div><label class="checkbox">
+                                <input hidden="" type="checkbox" class="checkbox__input" name="checkbox__input-lvl-3">
+                              </label></div>
+                            <div>1</div>
+                            <div>01232</div>
+                            <div class="list-accordion__name">Земляные работы (копка
+                              траншеи
+                              300х1500мм с обратной засыпкой и укладка трубы) до Бани
+                              работ</div>
+                            <div>15</div>
+                            <div>15</div>
+                            <div>1 230 000</div>
+                            <div>6 150
+                              000</div>
+                            <div><button type="button" class="btn-del-small"></button></div>
+                          </li>
+                          <li class="list-accordion__item">
+                            <div class="handle _icon-darag"></div>
+                            <div><label class="checkbox">
+                                <input hidden="" type="checkbox" class="checkbox__input" name="checkbox__input-lvl-3">
+                              </label></div>
+                            <div>1</div>
+                            <div>01232</div>
+                            <div class="list-accordion__name">Земляные работы (копка
+                              траншеи
+                              300х1500мм с обратной засыпкой и укладка трубы) до Бани
+                              работ</div>
+                            <div>15</div>
+                            <div>15</div>
+                            <div>1 230 000</div>
+                            <div>6 150
+                              000</div>
+                            <div><button type="button" class="btn-del-small"></button></div>
+                          </li>
+                        </ul>
+                      </li>
+                      <li class="list-accordion__footer footer-list">
+                        <button type="button" class="footer-list__btn-add-item " onclick="creatingPosition()"
+                          data-create-position><span class="add-btn"></span><span>Позиция</span></button>
+                        <span class="footer-list__sum">Итого: 530 000 р.</span>
+                      </li>
+                    </ul>
+                  </div>
+
+                  <!-- Конец Позиций -->
+                </div>
+              </div>
+            </li>
+
+          </ul>
+          <!-- Конец Этапы работы -->
+        </div>
+
+
       </div>
     </div>
+    <div class="todo-list__footer footer-list">
+      <button type="button" class="footer-list__btn-add-item" onclick="creatingStages()" data-create-stage><span
+          class="add-btn"></span><span>Этап
+          работ</span></button>
+      <span class="footer-list__sum">Итого по смете: 530 000 р.</span>
+    </div>
+    <div class="mt-3">
+      <label class="very-small"> Комментарий</label>
+      <input type="text" class="input-default" name="комментарий">
+    </div>
+
   </div>
-
-
-  <!-- jQuery -->
-  <script src="./plugins/jquery/jquery.min.js"></script>
-  <!-- Bootstrap 4 -->
-  <script src="./public/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <!-- Select2 -->
-  <script src="./public/plugins/select2/js/select2.full.min.js"></script>
-  <!-- jQuery UI 1.11.4 -->
-  <script src="./public/plugins/jquery-ui/jquery-ui.min.js"></script>
-  <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
-  <script>
-    $.widget.bridge('uibutton', $.ui.button)
-  </script>
-  <!-- Bootstrap4 Duallistbox -->
-  <script src="./public/plugins/bootstrap4-duallistbox/jquery.bootstrap-duallistbox.min.js"></script>
-
-  <script src="./public/plugins/moment/moment.min.js"></script>
-  <script src="./public/plugins/inputmask/jquery.inputmask.min.js"></script>
-  <script src="./public/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
-  <script src="./public/plugins/bootstrap-switch/js/bootstrap-switch.min.js"></script>
-  <script src="./public/plugins/bs-stepper/js/bs-stepper.min.js"></script>
-  <!-- JQVMap -->
-  <!-- <script src="./public/plugins/jqvmap/jquery.vmap.min.js"></script>
-  <script src="./public/plugins/jqvmap/maps/jquery.vmap.usa.js"></script> -->
-  <!-- jQuery Knob Chart -->
-  <script src="plugins/jquery-knob/jquery.knob.min.js"></script>
-  <!-- daterangepicker -->
-
-
-  <script src="./public/plugins/daterangepicker/daterangepicker.js"></script>
-
-  <!-- Tempusdominus Bootstrap 4 -->
-  <!-- overlayScrollbars -->
-  <!-- <script src="./public/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script> -->
-
-  <!-- Summernote -->
-  <script src="./public/plugins/summernote/summernote-bs4.min.js"></script>
-  <!-- AdminLTE App -->
-  <script src="../dist/js/adminlte.min.js?v=3.2.0"></script>
-  <!-- AdminLTE for demo purposes -->
-  <!-- <script src="./public/dist/js/demo.js"></script> -->
-  <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-  <!-- <script src="./public/dist/js/pages/dashboard.js"></script> -->
-  <script type="module" src="/src/assets/js/main.js"></script>
-
-
-</body>
-
-</html>
+</li>
