--- a/index.html
+++ b/index.html
@@ -44,12 +44,9 @@
       <div
         class="sidebar os-host os-theme-light os-host-overflow os-host-overflow-y os-host-resize-disabled os-host-transition os-host-scrollbar-horizontal-hidden">
         <div class="os-resize-observer-host observed">
-          <div class="os-resize-observer" style="left: 0px; right: auto;"></div>
-        </div>
-        <!-- <div class="os-size-auto-observer observed" style="height: calc(100% + 1px); float: left;">
           <div class="os-resize-observer"></div>
-        </div> -->
-        <!-- <div class="os-content-glue" style="margin: 0px -8px; width: 249px; height: 262px;"></div> -->
+        </div>
+
         <div class="os-padding">
           <div class="os-viewport os-viewport-native-scrollbars-invisible" style="overflow-y: scroll;">
             <div class="os-content px-3">
@@ -130,7 +127,7 @@
                 </ul>
               </nav>
     </aside>
-    <div class="content-wrapper p-4">
+    <div class="content-wrapper p-4 tooltip-margin-bottom">
       <h1 class="big-title">Создать смету</h1>
       <div class="container-content">
         <h2 class="middle-title mb-3">Информация</h2>
@@ -206,8 +203,8 @@
             <label for="engineer" class="list-input__label">Статус</label>
             <div class="list-input__wrapper-input list-input__wrapper-input_w-small">
               <div class="select-status">
-                <select class="select2  select2-hidden-accessible" name="Статус" style="width: 100%;"
-                  data-select2-id="select-status" tabindex="-1" aria-hidden="true">
+                <select class="select2  select2-hidden-accessible" name="Статус" data-select2-id="select-status"
+                  tabindex="-1" aria-hidden="true">
                   <option value="Выполнено" class="select-status__completed">Выполнено</option>
                   <option selected value="В работе" class="select-status__in-progress">В работе</option>
                   <option value="Отменено" class="select-status__cancelled">Отменено</option>
@@ -220,280 +217,40 @@
         </div>
       </div>
 
-      <ul class="todo-list" data-widget="todo-list">
-        <li class="todo-list__item d-flex  ">
-          <div class="container-content">
-            <div class="todo-list__contetn">
-              <span class="handle  _icon-darag">
-              </span>
-              <div class="todo-list__accordion accordion  card collapsed-card">
-                <div class="text-left  accordion__header collapsed middle-title">
-                  <button type="button" class="accordion__btn" data-card-widget="collapse"></button>
-                  <label class="accordion__checkbox checkbox">
-                    <input hidden type="checkbox" class="checkbox__input" name="checkbox-lvl-1">
-                  </label>
-                  <div class="accordion__header-content">
-                    <div class="accordion__name"> Водоснабжение</div>
-                    <div class="accordion__select ">
-                      <label class="accordion__name-select">Статус</label>
-                      <div class="select-status">
-                        <select class="select2  select2-hidden-accessible" name="Статус" style="width: 100%;"
-                          data-select2-id="select-status-" tabindex="-1" aria-hidden="true">
-                          <option value="Выполнено" class="select-status__completed">Выполнено</option>
-                          <option selected value="В работе" class="select-status__in-progress">В работе</option>
-                          <option value="Отменено" class="select-status__cancelled">Отменено</option>
-                          <option value="Отложено" class="select-status__postponed">Отложено</option>
-                        </select>
-                      </div>
-                    </div>
-                    <div class="accordion__del-btn">
-                      <span role="button" class=" btn-del-big"><span>Удалить</span></span>
-                    </div>
-                  </div>
-                </div>
+      <ul class="todo-list" data-smeta data-widget="todo-list">
 
-
-
-                <div class="accordion__body card-body">
-                  <!-- Этапы работы -->
-                  <ul class="todo-list overflow-hidden mt-3" data-widget="todo-list">
-                    <li class="todo-list__item ">
-                      <div class="todo-list__contetn">
-                        <span class="handle  _icon-darag">
-                        </span>
-                        <div class="todo-list__accordion accordion card collapsed-card">
-                          <!-- Начала Позиций  -->
-
-                          <div class=" text-left accordion__header middle-title">
-                            <button type="button" class="accordion__btn" data-card-widget="collapse"></button>
-                            <label class="accordion__checkbox checkbox">
-                              <input hidden type="checkbox" class="checkbox__input" name="checkbox-lvl-2">
-                            </label>
-                            <div class="accordion__header-content">
-                              <div class="accordion__name very-small accordion__name_small-text"> Работы,
-                                оборудование и
-                                материалы
-                                (Водоснабжение)</div>
-                              <div class="accordion__del-btn accordion__del-btn_small"><span role="button"
-                                  class=" btn-del-small"></span></div>
-                            </div>
-                          </div>
-                          <div class="accordion__body card-body ">
-                            <ul class=" accordion__list list-accordion">
-                              <li class=" list-accordion__head">
-                                <div></div>
-                                <div><label class="checkbox">
-                                    <input hidden="" type="checkbox" class="checkbox__input" name="checkbox-lvl-3">
-                                  </label></div>
-                                <div>№</div>
-                                <div>Арт.</div>
-                                <div>Наименование работ</div>
-                                <div>Ед.
-                                  изм.</div><span>Кол-во.</span><span>Цена р.</span>
-                                <div>Сумма р.</div>
-                                <div></div>
-                              </li>
-                              <li class="list-accordion__body">
-                                <ul class="todo-list">
-                                  <li class="list-accordion__item">
-                                    <div class="handle _icon-darag"></div>
-                                    <div><label class="checkbox">
-                                        <input hidden="" type="checkbox" class="checkbox__input" name="checkbox-lvl-3">
-                                      </label></div>
-                                    <div>1</div>
-                                    <div>01232</div>
-                                    <div class="list-accordion__name">Земляные работы (копка
-                                      траншеи
-                                      300х1500мм с обратной засыпкой и укладка трубы) до Бани
-                                      работ</div>
-                                    <div>15</div>
-                                    <div>15</div>
-                                    <div>1 230 000</div>
-                                    <div>6 150
-                                      000</div>
-                                    <div><button type="button" class="btn-del-small"></button></div>
-                                  </li>
-                                  <li class="list-accordion__item">
-                                    <div class="handle _icon-darag"></div>
-                                    <div><label class="checkbox">
-                                        <input hidden="" type="checkbox" class="checkbox__input"
-                                          name="checkbox__input-lvl-3">
-                                      </label></div>
-                                    <div>1</div>
-                                    <div>01232</div>
-                                    <div class="list-accordion__name">Земляные работы (копка
-                                      траншеи
-                                      300х1500мм с обратной засыпкой и укладка трубы) до Бани
-                                      работ</div>
-                                    <div>15</div>
-                                    <div>15</div>
-                                    <div>1 230 000</div>
-                                    <div>6 150
-                                      000</div>
-                                    <div><button type="button" class="btn-del-small"></button></div>
-                                  </li>
-                                  <li class="list-accordion__item">
-                                    <div class="handle _icon-darag"></div>
-                                    <div><label class="checkbox">
-                                        <input hidden="" type="checkbox" class="checkbox__input"
-                                          name="checkbox__input-lvl-3">
-                                      </label></div>
-                                    <div>1</div>
-                                    <div>01232</div>
-                                    <div class="list-accordion__name">Земляные работы (копка
-                                      траншеи
-                                      300х1500мм с обратной засыпкой и укладка трубы) до Бани
-                                      работ</div>
-                                    <div>15</div>
-                                    <div>15</div>
-                                    <div>1 230 000</div>
-                                    <div>6 150
-                                      000</div>
-                                    <div><button type="button" class="btn-del-small"></button></div>
-                                  </li>
-                                </ul>
-                              </li>
-                              <li class="list-accordion__footer footer-list">
-                                <button type="button" class="footer-list__btn-add-item"><span
-                                    class="add-btn"></span><span>Позиция</span></button>
-                                <span class="footer-list__sum">Итого: 530 000 р.</span>
-                              </li>
-                            </ul>
-                          </div>
-
-                          <!-- Конец Позиций -->
-                        </div>
-                      </div>
-                    </li>
-                    <li class="todo-list__item ">
-                      <div class="todo-list__contetn">
-                        <span class="handle  _icon-darag">
-                        </span>
-                        <div class="todo-list__accordion accordion card collapsed-card">
-                          <!-- Начала Позиций  -->
-
-                          <div class="text-left  accordion__header  middle-title">
-                            <button type="button" class="accordion__btn" data-card-widget="collapse"></button>
-                            <label class="accordion__checkbox checkbox">
-                              <input hidden type="checkbox" class="checkbox__input" name="checkbox-lvl-2">
-                            </label>
-                            <div class="accordion__header-content">
-                              <div class="accordion__name very-small accordion__name_small-text">Каккие-то рабоыт
-                                по
-                                (Водоснабжение)</div>
-                              <div class="accordion__del-btn accordion__del-btn_small"><span role="button"
-                                  class="btn-del-small"></span></div>
-                            </div>
-                          </div>
-                          <div class="accordion__body card-body">
-                            <ul class=" accordion__list list-accordion">
-                              <li class=" list-accordion__head">
-                                <div></div>
-                                <div><label class="checkbox">
-                                    <input hidden="" type="checkbox" class="checkbox__input" name="checkbox-lvl-3">
-                                  </label></div>
-                                <div>№</div>
-                                <div>Арт.</div>
-                                <div>Наименование работ</div>
-                                <div>Ед.
-                                  изм.</div><span>Кол-во.</span><span>Цена р.</span>
-                                <div>Сумма р.</div>
-                                <div></div>
-                              </li>
-                              <li class="list-accordion__body">
-                                <ul class="todo-list">
-                                  <li class="list-accordion__item">
-                                    <div class="handle _icon-darag"></div>
-                                    <div><label class="checkbox">
-                                        <input hidden="" type="checkbox" class="checkbox__input" name="checkbox-lvl-3">
-                                      </label></div>
-                                    <div>1</div>
-                                    <div>01232</div>
-                                    <div class="list-accordion__name">Земляные работы (копка
-                                      траншеи
-                                      300х1500мм с обратной засыпкой и укладка трубы) до Бани
-                                      работ</div>
-                                    <div>15</div>
-                                    <div>15</div>
-                                    <div>1 230 000</div>
-                                    <div>6 150
-                                      000</div>
-                                    <div><button type="button" class="btn-del-small"></button></div>
-                                  </li>
-                                  <li class="list-accordion__item">
-                                    <div class="handle _icon-darag"></div>
-                                    <div><label class="checkbox">
-                                        <input hidden="" type="checkbox" class="checkbox__input" name="checkbox-lvl-3">
-                                      </label></div>
-                                    <div>1</div>
-                                    <div>01232</div>
-                                    <div class="list-accordion__name">Земляные работы (копка
-                                      траншеи
-                                      300х1500мм с обратной засыпкой и укладка трубы) до Бани
-                                      работ</div>
-                                    <div>15</div>
-                                    <div>15</div>
-                                    <div>1 230 000</div>
-                                    <div>6 150
-                                      000</div>
-                                    <div><button type="button" class="btn-del-small"></button></div>
-                                  </li>
-                                  <li class="list-accordion__item">
-                                    <div class="handle _icon-darag"></div>
-                                    <div><label class="checkbox">
-                                        <input hidden="" type="checkbox" class="checkbox__input" name="checkbox-lvl-3">
-                                      </label></div>
-                                    <div>1</div>
-                                    <div>01232</div>
-                                    <div class="list-accordion__name">Земляные работы (копка
-                                      траншеи
-                                      300х1500мм с обратной засыпкой и укладка трубы) до Бани
-                                      работ</div>
-                                    <div>15</div>
-                                    <div>15</div>
-                                    <div>1 230 000</div>
-                                    <div>6 150
-                                      000</div>
-                                    <div><button type="button" class="btn-del-small"></button></div>
-                                  </li>
-                                </ul>
-                              </li>
-                              <li class="list-accordion__footer footer-list">
-                                <button type="button" class="footer-list__btn-add-item"><span
-                                    class="add-btn"></span><span>Позиция</span></button>
-                                <span class="footer-list__sum">Итого: 530 000 р.</span>
-                              </li>
-                            </ul>
-                          </div>
-
-                          <!-- Конец Позиций -->
-                        </div>
-                      </div>
-                    </li>
-                  </ul>
-                  <!-- Конец Этапы работы -->
-                </div>
-
-
-              </div>
-            </div>
-            <div class="todo-list__footer footer-list">
-              <button type="button" class="footer-list__btn-add-item"><span class="add-btn"></span><span>Этап
-                  работ</span></button>
-              <span class="footer-list__sum">Итого по смете: 530 000 р.</span>
-            </div>
-            <div class="mt-3">
-              <label class="very-small"> Комментарий</label>
-              <input type="text" class="input-default" name="комментарий">
-            </div>
-            <!-- создание этапа -->
-            <div class="create-stage">
-
-            </div>
-          </div>
-        </li>
 
       </ul>
+
+      <div class="btn-group btn-dropdown my-4">
+        <button type="button" class="btn btn-success" onclick="creatingSmeta()">Добавить смету</button>
+        <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+
+        </button>
+        <div class="dropdown-menu" role="menu">
+          <a class="dropdown-item" href="#">Пустая смета</a>
+          <a class="dropdown-item" href="#">Из шаблона</a>
+
+
+        </div>
+      </div>
+
+      <div class="tooltip-smeta container-content">
+        <div class="btn-group btn-dropdown ">
+          <button type="button" class="btn btn-success">Экспортировать</button>
+          <button type=" button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+
+          </button>
+          <div class="dropdown-menu" role="menu">
+            <a class="dropdown-item" href="#">Пустая смета</a>
+            <a class="dropdown-item" href="#">Из шаблона</a>
+
+
+          </div>
+        </div>
+        <button class="butt">Обновить цены</button>
+        <button class="butt bg-gradient-danger" onclick="deleteItemSmeata()">Удалить выброное</button>
+      </div>
     </div>
 
   </div>
@@ -542,6 +299,7 @@
   <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
   <script src="./public/dist/js/pages/dashboard.js"></script>
   <script type="module" src="/src/assets/js/main.js"></script>
+
 
   <script>
     $(function () {
