feat:добавил удление всех позицей

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
           </div>
         </div>
         <button class="butt">Обновить цены</button>
-        <button class="butt bg-gradient-danger" onclick="deleteItemSmeata()">Удалить выброное</button>
+        <button class="butt bg-gradient-danger" onclick="deleteSelectedSmeata()">Удалить выброное</button>
       </div>
     </div>
 
