feat: добавил поиск по итам

--- a/index copy 2.html
+++ b/index copy 2.html
@@ -47,7 +47,7 @@
                       <input hidden type="checkbox" class="checkbox__input" name="checkbox-lvl-2">
                     </label>
                     <div class="accordion__header-content">
-                      <div class="accordion__name very-small accordion__name_small-text"> Работы,
+                      <div class="accordion__name very-small-title accordion__name_small-text"> Работы,
                         оборудование и
                         материалы
                         (Водоснабжение)</div>
@@ -155,7 +155,7 @@
       <span class="footer-list__sum">Итого по смете: 530 000 р.</span>
     </div>
     <div class="mt-3">
-      <label class="very-small"> Комментарий</label>
+      <label class="very-small-title"> Комментарий</label>
       <input type="text" class="input-default" name="комментарий">
     </div>
 
