начал длеать страницу прайс-лист

--- a/index.html
+++ b/index.html
@@ -92,42 +92,37 @@
               </div>
 
               <nav class="mt-4">
-                <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu"
+                <ul class="nav nav-pills nav-sidebar flex-column " data-widget="treeview" role="menu"
                   data-accordion="false">
-                  <!-- Add icons to the links using the .nav-icon class
-                       with font-awesome or any other icon font library -->
+
 
                   <li class="nav-item">
-                    <a href="#" class="nav-link font-weight-bold _icon-dashboard">
-                      <p>
-                        Дашборд
-                      </p>
+                    <a href="./index.html" class="nav-link p-2 _active-page font-weight-bold _icon-dashboard">
+                      Дашборд
                     </a>
 
                   </li>
                   <li class="nav-item">
-                    <a href="#" class="nav-link font-weight-bold _icon-priceList">
-                      <p>
-                        Прайс-лист
-                      </p>
+                    <a href="./page-price-list.html" class="nav-link p-2 font-weight-bold _icon-priceList">
+                      Прайс-лист
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a href="#" class="nav-link font-weight-bold _icon-client">
-                      <p>
-                        Клиенты
-                      </p>
+                    <a href="#" class="nav-link font-weight-bold p-2 _icon-client">
+                      Клиенты
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a href="#" class="nav-link font-weight-bold _icon-pattern">
-                      <p>
-                        Шаблоны
-                      </p>
+                    <a href="#" class="nav-link font-weight-bold p-2 _icon-pattern">
+                      Шаблоны
                     </a>
                   </li>
                 </ul>
               </nav>
+            </div>
+          </div>
+        </div>
+      </div>
     </aside>
     <!-- Конец главгый сайдбар -->
     <!-- Начала папки шаблонами -->
@@ -243,6 +238,7 @@
               </select>
             </div>
             <button type="button" class="list-input__add-btn add-btn"></button>
+            <button type="button" class="list-input__butt-plus butt-plus">Создать клиента</button>
           </div>
           <div class="list-input__item">
             <label class="list-input__label">Менеджер</label>
@@ -324,7 +320,7 @@
         class="butt my-4 butt-success">Добавить смету</button>
 
 
-      </button>
+
 
 
       <div class="container-content">
