начал таблицу преедловать

--- a/index.html
+++ b/index.html
@@ -104,17 +104,17 @@
                   </li>
                   <li class="nav-item">
                     <a href="./page-price-list.html" class="nav-link p-2 font-weight-bold _icon-priceList">
-                      Прайс-лист
+                      <p> Прайс-лист</p>
                     </a>
                   </li>
                   <li class="nav-item">
                     <a href="#" class="nav-link font-weight-bold p-2 _icon-client">
-                      Клиенты
+                      <p>Клиенты</p>
                     </a>
                   </li>
                   <li class="nav-item">
                     <a href="#" class="nav-link font-weight-bold p-2 _icon-pattern">
-                      Шаблоны
+                      <p> Шаблоны</p>
                     </a>
                   </li>
                 </ul>
@@ -153,7 +153,7 @@
 
             <ul class="search-items__list ">
               <li class="search-items__item  _icon-folder ">
-                <span class="flex-fill test-searsh"> Септики</span> <span>12.12.2024</span>
+                <span class="flex-fill "> Септики</span> <span>12.12.2024</span>
                 <div class="search-items__btn-dropdown dropdown-search">
                   <button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
                   </button>
@@ -164,7 +164,7 @@
                 </div>
               </li>
               <li class="search-items__item  _icon-folder ">
-                <span class="flex-fill test-searsh"> Канализация</span> <span>12.12.2024</span>
+                <span class="flex-fill "> Канализация</span> <span>12.12.2024</span>
                 <div class="search-items__btn-dropdown dropdown-search">
                   <button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
                   </button>
@@ -175,7 +175,7 @@
                 </div>
               </li>
               <li class="search-items__item  _icon-folder ">
-                <span class="flex-fill test-searsh"> Фундамент</span> <span>12.12.2024</span>
+                <span class="flex-fill "> Фундамент</span> <span>12.12.2024</span>
                 <div class="search-items__btn-dropdown dropdown-search">
                   <button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
                   </button>
@@ -186,7 +186,7 @@
                 </div>
               </li>
               <li class="search-items__item  _icon-folder ">
-                <span class="flex-fill test-searsh"> Скважины</span> <span>12.12.2024</span>
+                <span class="flex-fill "> Скважины</span> <span>12.12.2024</span>
                 <div class="search-items__btn-dropdown dropdown-search">
                   <button type="button" class="dropdown-search__btn" data-toggle="dropdown" aria-expanded="true">
                   </button>
