--- a/page-price-list.html
+++ b/page-price-list.html
@@ -100,7 +100,7 @@
                   <li class="nav-item">
                     <a href="./index.html" class="nav-link font-weight-bold _icon-dashboard">
 
-                      Дашборд
+                      <p> Дашборд</p>
 
                     </a>
 
@@ -108,21 +108,23 @@
                   <li class="nav-item">
                     <a href="./page-price-list.html" class="nav-link _active-page font-weight-bold _icon-priceList">
 
-                      Прайс-лист
+                      <p> Прайс-лист</p>
 
                     </a>
                   </li>
                   <li class="nav-item">
                     <a href="#" class="nav-link font-weight-bold _icon-client">
 
-                      Клиенты
+                      <p> Клиенты</p>
 
                     </a>
                   </li>
                   <li class="nav-item">
                     <a href="#" class="nav-link font-weight-bold _icon-pattern">
+                      <p>
 
-                      Шаблоны
+                        Шаблоны
+                      </p>
 
                     </a>
                   </li>
@@ -139,8 +141,8 @@
       <h1 class="big-title">Прайс-лист</h1>
 
 
-      <div>
-        <div class="btn-group btn-dropdown ">
+      <div class="d-flex mb-4">
+        <div class="btn-group btn-dropdown mr-3">
           <button type="button" class="btn btn-success">Экспортировать</button>
           <button type=" button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
 
@@ -148,17 +150,180 @@
           <div class="dropdown-menu" role="menu">
             <a class="dropdown-item" href="#">Пустая смета</a>
             <a class="dropdown-item" href="#">Из шаблона</a>
-
-
           </div>
         </div>
+
+        <button class=" butt-success _icon-imp-data d-flex flex-row-reverse align-items-center">Импорт данных</button>
       </div>
 
 
+      <div class="container-content">
+        <div class="search-items" data-search-items>
+          <div class="search-items__input _icon-search mb-3">
+            <input type="text" onkeyup="searchItems()" class=" input-default">
+          </div>
+          <ul class="price-list">
+            <li class="price-list__grid price-list__grid_cg">
+              <span></span>
+              <button type="button" id="sort-number">№</button>
+              <button type="button" id="sort-category">Кат.</button>
+              <button type="button" id="sort-article">Арт.</button>
+              <button type="button" class="flex-fill" id="sort-name">Наименование</button>
+              <button type="button" id="sort-unit">Ед. изм.</button>
+              <button type="button" id="sort-price">Цена р.</button>
 
+            </li>
+          </ul>
+          <ul class="search-items__list">
+            <li class=" price-list__grid">
+              <label class=" checkbox">
+                <input hidden="" type="checkbox" class="checkbox__input" name="checkbox-smeta">
+              </label>
+              <span>1</span>
+              <span class="_mat-category">Мат</span>
+              <span>01232</span>
+              <span class="flex-fill"> Доски струганые половые</span>
 
+              <span>метры</span>
+              <span>1 230 000</span>
+              <span class="d-flex justify-content-end"><button type=" button" class=" btn-del-small"></button></span>
+            </li>
+            <li class=" price-list__grid">
+              <label class=" checkbox">
+                <input hidden="" type="checkbox" class="checkbox__input" name="checkbox-smeta">
+              </label>
+              <span>2</span>
+              <span class="_rab-category">Раб</span>
+              <span>01232</span>
+              <span class="flex-fill">Монтаж теплого пола</span>
+              <span>штуки</span>
+              <span>1 230 000</span>
+              <span class="d-flex justify-content-end"> <button type=" button" class=" btn-del-small"></button></span>
+            </li>
+            <li class=" price-list__grid">
+              <label class=" checkbox">
+                <input hidden="" type="checkbox" class="checkbox__input" name="checkbox-smeta">
+              </label>
+              <span>2</span>
+              <span class="_meh-category">Мех</span>
+              <span>01232</span>
+              <span class="flex-fill">Циклевальная машина</span>
+              <span>метры</span>
+              <span>1 230 000</span>
+              <span class="d-flex justify-content-end"><button type=" button" class=" btn-del-small"></button></span>
+            </li>
+            <li class=" price-list__grid">
+              <label class=" checkbox">
+                <input hidden="" type="checkbox" class="checkbox__input" name="checkbox-smeta">
+              </label>
+              <span>2</span>
+              <span class="_doc-category">Дос</span>
+              <span>11232</span>
+              <span class="flex-fill">Грузовая газель</span>
+              <span>метры</span>
+              <span>1 230 000</span>
+              <span class="d-flex justify-content-end"><button type=" button" class=" btn-del-small"></button></span>
+            </li>
+          </ul>
+          <button class="butt-plus mt-3" type="button">Позиция</button>
+        </div>
+      </div>
+      <div class="container-content">
+        <table id="example2" class="table table-bordered table-hover dataTable dtr-inline"
+          aria-describedby="example2_info">
+          <thead>
+            <tr>
+              <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1"
+                aria-label="Rendering engine: activate to sort column ascending">Rendering engine</th>
+              <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1"
+                aria-label="Browser: activate to sort column ascending">Browser</th>
+              <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1"
+                aria-label="Platform(s): activate to sort column ascending">Platform(s)</th>
+              <th class="sorting sorting_desc" tabindex="0" aria-controls="example2" rowspan="1" colspan="1"
+                aria-label="Engine version: activate to sort column ascending" aria-sort="descending">Engine
+                version</th>
+              <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1"
+                aria-label="CSS grade: activate to sort column ascending">CSS grade</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr class="odd">
+              <td class="dtr-control" tabindex="0">Мат</td>
+              <td>Safari 3.0</td>
+              <td class="">OSX.4+</td>
+              <td class="sorting_1">522.1</td>
+              <td>A</td>
+            </tr>
+            <tr class="even">
+              <td class="dtr-control" tabindex="0">Мех
+              </td>
+              <td>iPod Touch / iPhone</td>
+              <td class="">iPod</td>
+              <td class="sorting_1">420.1</td>
+              <td>A</td>
+            </tr>
+            <tr class="odd">
+              <td class="dtr-control" tabindex="0">Мат</td>
+              <td>OmniWeb 5.5</td>
+              <td class="">OSX.4+</td>
+              <td class="sorting_1">420</td>
+              <td>A</td>
+            </tr>
+            <tr class="even">
+              <td class="dtr-control" tabindex="0">Раб</td>
+              <td>Safari 2.0</td>
+              <td class="">OSX.4+</td>
+              <td class="sorting_1">419.3</td>
+              <td>A</td>
+            </tr>
+            <tr class="odd">
+              <td class="dtr-control" tabindex="0">Мат</td>
+              <td>S60</td>
+              <td class="">S60</td>
+              <td class="sorting_1">413</td>
+              <td>A</td>
+            </tr>
+            <tr class="even">
+              <td class="dtr-control" tabindex="0">Раб</td>
+              <td>Safari 1.3</td>
+              <td class="">OSX.3</td>
+              <td class="sorting_1">312.8</td>
+              <td>A</td>
+            </tr>
+            <tr class="odd">
+              <td class="dtr-control" tabindex="0">Мат</td>
+              <td>Safari 1.2</td>
+              <td class="">OSX.3</td>
+              <td class="sorting_1">125.5</td>
+              <td>A</td>
+            </tr>
+            <tr class="even">
+              <td class="dtr-control">Мех
+              </td>
+              <td>Nintendo DS browser</td>
+              <td class="">Nintendo DS</td>
+              <td class="sorting_1">8.5</td>
+              <td>C/A<sup>1</sup></td>
+            </tr>
+            <tr class="odd">
+              <td class="dtr-control" tabindex="0">Раб</td>
+              <td>Internet Explorer 7</td>
+              <td class="">Win XP SP2+</td>
+              <td class="sorting_1">7</td>
+              <td>A</td>
+            </tr>
+            <tr class="even">
+              <td class="dtr-control" tabindex="0">Мат</td>
+              <td>AOL browser (AOL desktop)</td>
+              <td class="">Win XP</td>
+              <td class="sorting_1">6</td>
+              <td>A</td>
+            </tr>
+          </tbody>
 
+        </table>
 
+      </div>
 
 
     </div>
@@ -170,8 +335,12 @@
   <script src="./plugins/jquery/jquery.min.js"></script>
   <!-- Bootstrap 4 -->
   <script src="./public/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <!-- Select2 -->
-  <script src="./public/plugins/select2/js/select2.full.min.js"></script>
+  <script src="./public/plugins/datatables/jquery.dataTables.min.js"></script>
+  <script src="./public/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
+  <script src="./public/plugins/datatables-responsive/js/dataTables.responsive.min.js"></script>
+  <script src="./public/plugins/datatables-responsive/js/responsive.bootstrap4.min.js"></script>
+  <script src="./public/plugins/datatables-buttons/js/dataTables.buttons.min.js"></script>
+  <script src="./public/plugins/datatables-buttons/js/buttons.bootstrap4.min.js"></script>
   <!-- jQuery UI 1.11.4 -->
   <script src="./public/plugins/jquery-ui/jquery-ui.min.js"></script>
   <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
@@ -210,67 +379,22 @@
   <script src="./public/dist/js/pages/dashboard.js"></script>
   <script type="module" src="/src/assets/js/main.js"></script>
 
-
   <script>
     $(function () {
-      //Initialize Select2 Elements
+      $("#example1").DataTable({
+        "responsive": true, "lengthChange": false, "autoWidth": false,
 
-      //Initialize Select2 Elements
-      $('.select2bs4').select2({
-        theme: 'bootstrap4'
-      })
-
-      //Datemask dd/mm/yyyy
-      $('#datemask').inputmask('dd/mm/yyyy', { 'placeholder': 'dd/mm/yyyy' })
-      //Datemask2 mm/dd/yyyy
-      $('.datemask2').inputmask('mm.dd.yyyy')
-      //Money Euro
-      $('[data-mask]').inputmask()
-
-
-
-
-
-
-
-
-      //Bootstrap Duallistbox
-      $('.duallistbox').bootstrapDualListbox()
-
-
-
-
-      $("input[data-bootstrap-switch]").each(function () {
-        $(this).bootstrapSwitch('state', $(this).prop('checked'));
-      })
-
-    })
-    // BS-Stepper Init
-    document.addEventListener('DOMContentLoaded', function () {
-      window.stepper = new Stepper(document.querySelector('.bs-stepper'))
-    })
-
-
-
-    // Get the template HTML and remove it from the doumenthe template HTML and remove it from the doument
-    var previewNode = document.querySelector("#template")
-    previewNode.id = ""
-    var previewTemplate = previewNode.parentNode.innerHTML
-    previewNode.parentNode.removeChild(previewNode)
-
-
-
-
-    // Setup the buttons for all transfers
-    // The "add files" button doesn't need to be setup because the config
-    // `clickable` has already been specified.
-    document.querySelector("#actions .start").onclick = function () {
-      myDropzone.enqueueFiles(myDropzone.getFilesWithStatus(Dropzone.ADDED))
-    }
-    document.querySelector("#actions .cancel").onclick = function () {
-      myDropzone.removeAllFiles(true)
-    }
-    // DropzoneJS Demo Code End
+      }).buttons().container().appendTo('#example1_wrapper .col-md-6:eq(0)');
+      $('#example2').DataTable({
+        "paging": true,
+        "lengthChange": false,
+        "searching": false,
+        "ordering": true,
+        "info": true,
+        "autoWidth": false,
+        "responsive": true,
+      });
+    });
   </script>
 </body>
 
