feat:добавил удления и доабления элементов

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
                   </li>
                   <li class="nav-item">
-                    <a href="./page-price-list.html" class="nav-link p-2 font-weight-bold _icon-priceList">
+                    <a href="./pages/page-price-list.html" class="nav-link p-2 font-weight-bold _icon-priceList">
                       <p> Прайс-лист</p>
                     </a>
                   </li>
@@ -148,7 +148,7 @@
           </div>
           <div class="search-items" data-search-items>
             <div class="search-items__input _icon-search mb-3">
-              <input type="text" onkeyup="searchItems()" class=" input-default">
+              <input type="text" onkeyup="searchItems()" placeholder="Поиск" class=" input-default">
             </div>
 
             <ul class="search-items__list ">
@@ -390,7 +390,8 @@
   <!-- <script src="./public/dist/js/demo.js"></script> -->
   <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
   <script src="./public/dist/js/pages/dashboard.js"></script>
-  <script type="module" src="/src/assets/js/main.js"></script>
+
+  <script type="module" src="./src/assets/js/main.js"></script>
 
 
   <script>
