--- a/pages/page-price-list.html
+++ b/pages/page-price-list.html
@@ -10,26 +10,26 @@
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="plugins/fontawesome-free/css/all.min.css">
+  <link rel="stylesheet" href="../plugins/fontawesome-free/css/all.min.css">
   <!-- Ionicons -->
   <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
   <!-- Tempusdominus Bootstrap 4 -->
-  <link rel="stylesheet" href="./public/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css">
+  <link rel="stylesheet" href="../public/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css">
   <!-- Select2 -->
-  <link rel="stylesheet" href="./plugins/select2/css/select2.min.css">
-  <link rel="stylesheet" href="./plugins/select2-bootstrap4-theme/select2-bootstrap4.min.css">
+  <link rel="stylesheet" href="../plugins/select2/css/select2.min.css">
+  <link rel="stylesheet" href="../plugins/select2-bootstrap4-theme/select2-bootstrap4.min.css">
   <!-- iCheck -->
-  <link rel="stylesheet" href="./public/plugins/icheck-bootstrap/icheck-bootstrap.min.css">
+  <link rel="stylesheet" href="../public/plugins/icheck-bootstrap/icheck-bootstrap.min.css">
   <!-- JQVMap -->
-  <link rel="stylesheet" href="./public/plugins/jqvmap/jqvmap.min.css">
+  <link rel="stylesheet" href="../public/plugins/jqvmap/jqvmap.min.css">
   <!-- Theme style -->
-  <link rel="stylesheet" href="./public/dist/css/adminlte.min.css">
+  <link rel="stylesheet" href="../public/dist/css/adminlte.min.css">
   <!-- overlayScrollbars -->
-  <link rel="stylesheet" href="./public/plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
+  <link rel="stylesheet" href="../public/plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
   <!-- Daterange picker -->
-  <link rel="stylesheet" href="./public/plugins/daterangepicker/daterangepicker.css">
+  <link rel="stylesheet" href="../public/plugins/daterangepicker/daterangepicker.css">
   <!-- summernote -->
-  <link rel="stylesheet" href="./public//plugins/summernote/summernote-bs4.min.css">
+  <link rel="stylesheet" href="../public//plugins/summernote/summernote-bs4.min.css">
 </head>
 
 <body class="sidebar-mini layout-fixed">
@@ -98,7 +98,7 @@
                        with font-awesome or any other icon font library -->
 
                   <li class="nav-item">
-                    <a href="./index.html" class="nav-link font-weight-bold _icon-dashboard">
+                    <a href="../index.html" class="nav-link font-weight-bold _icon-dashboard">
 
                       <p> Дашборд</p>
 
@@ -157,83 +157,13 @@
       </div>
 
 
-      <div class="container-content">
-        <div class="search-items" data-search-items>
-          <div class="search-items__input _icon-search mb-3">
-            <input type="text" onkeyup="searchItems()" class=" input-default">
-          </div>
-          <ul class="price-list">
-            <li class="price-list__grid price-list__grid_cg">
-              <span></span>
-              <button type="button" id="sort-number">№</button>
-              <button type="button" id="sort-category">Кат.</button>
-              <button type="button" id="sort-article">Арт.</button>
-              <button type="button" class="flex-fill" id="sort-name">Наименование</button>
-              <button type="button" id="sort-unit">Ед. изм.</button>
-              <button type="button" id="sort-price">Цена р.</button>
 
-            </li>
-          </ul>
-          <ul class="search-items__list">
-            <li class=" price-list__grid">
-              <label class=" checkbox">
-                <input hidden="" type="checkbox" class="checkbox__input" name="checkbox-smeta">
-              </label>
-              <span>1</span>
-              <span class="_mat-category">Мат</span>
-              <span>01232</span>
-              <span class="flex-fill"> Доски струганые половые</span>
-
-              <span>метры</span>
-              <span>1 230 000</span>
-              <span class="d-flex justify-content-end"><button type=" button" class=" btn-del-small"></button></span>
-            </li>
-            <li class=" price-list__grid">
-              <label class=" checkbox">
-                <input hidden="" type="checkbox" class="checkbox__input" name="checkbox-smeta">
-              </label>
-              <span>2</span>
-              <span class="_rab-category">Раб</span>
-              <span>01232</span>
-              <span class="flex-fill">Монтаж теплого пола</span>
-              <span>штуки</span>
-              <span>1 230 000</span>
-              <span class="d-flex justify-content-end"> <button type=" button" class=" btn-del-small"></button></span>
-            </li>
-            <li class=" price-list__grid">
-              <label class=" checkbox">
-                <input hidden="" type="checkbox" class="checkbox__input" name="checkbox-smeta">
-              </label>
-              <span>2</span>
-              <span class="_meh-category">Мех</span>
-              <span>01232</span>
-              <span class="flex-fill">Циклевальная машина</span>
-              <span>метры</span>
-              <span>1 230 000</span>
-              <span class="d-flex justify-content-end"><button type=" button" class=" btn-del-small"></button></span>
-            </li>
-            <li class=" price-list__grid">
-              <label class=" checkbox">
-                <input hidden="" type="checkbox" class="checkbox__input" name="checkbox-smeta">
-              </label>
-              <span>2</span>
-              <span class="_doc-category">Дос</span>
-              <span>11232</span>
-              <span class="flex-fill">Грузовая газель</span>
-              <span>метры</span>
-              <span>1 230 000</span>
-              <span class="d-flex justify-content-end"><button type=" button" class=" btn-del-small"></button></span>
-            </li>
-          </ul>
-          <button class="butt-plus mt-3" type="button">Позиция</button>
-        </div>
-      </div>
       <div class="container-content">
+
         <table id="example2" class="price-list" aria-describedby="example2_info">
           <thead>
             <tr>
-              <th width="1.509434%" class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1"
-                aria-label="Rendering engine: activate to sort column ascending"></th>
+
               <th width="2.54717%" class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1"
                 aria-label="Rendering engine: activate to sort column ascending">№</th>
               <th width="3.018868%" class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1"
@@ -249,25 +179,24 @@
                 aria-label="CSS grade: activate to sort column ascending">Цена р.</th>
               <th width="2.264151%" class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1"
                 aria-label="CSS grade: activate to sort column ascending"></th>
+              <th width="2.264151%" class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1"
+                aria-label="CSS grade: activate to sort column ascending"></th>
             </tr>
           </thead>
           <tbody>
-            <tr class="odd">
-              <td><label class=" checkbox">
-                  <input hidden="" type="checkbox" class="checkbox__input" name="checkbox-smeta">
-                </label></td>
+            <tr>
+
               <td class="dtr-control" tabindex="0">1</td>
               <td><span class="_mat-category">Мат</span></td>
               <td class="">01232</td>
               <td class="sorting_1">Доски струганые половые</td>
               <td>метры</td>
               <td>10</td>
-              <td><button type=" button" class=" btn-del-small"></button></td>
+              <td><button type=" button" data-toggle="modal" data-target="#modal-lg" class=" btn-edit"></button></td>
+              <td><button type=" button" onclick="deleteItemPL(event)" class=" btn-del-small"></button></td>
             </tr>
-            <tr class="even">
-              <td><label class=" checkbox">
-                  <input hidden="" type="checkbox" class="checkbox__input" name="checkbox-smeta">
-                </label></td>
+            <tr>
+
               <td class="dtr-control" tabindex="0">2
               </td>
               <td><span class="_rab-category">Раб</span></td>
@@ -275,24 +204,22 @@
               <td class="sorting_1">Монтаж теплого пола</td>
               <td>метры</td>
               <td>20</td>
-              <td><button type=" button" class=" btn-del-small"></button></td>
+              <td><button type=" button" data-toggle="modal" data-target="#modal-lg" class=" btn-edit"></button></td>
+              <td><button type=" button" onclick="deleteItemPL(event)" class=" btn-del-small"></button></td>
             </tr>
-            <tr class="odd">
-              <td><label class=" checkbox">
-                  <input hidden="" type="checkbox" class="checkbox__input" name="checkbox-smeta">
-                </label></td>
+            <tr>
+
               <td class="dtr-control" tabindex="0">3</td>
               <td><span class="_meh-category">Мех</span></td>
               <td class="">01232</td>
               <td class="sorting_1">Циклевальная машина</td>
               <td>метры</td>
               <td>40</td>
-              <td><button type=" button" class=" btn-del-small"></button></td>
+              <td><button type=" button" data-toggle="modal" data-target="#modal-lg" class=" btn-edit"></button></td>
+              <td><button type=" button" onclick="deleteItemPL(event)" class=" btn-del-small"></button></td>
             </tr>
-            <tr class="even">
-              <td><label class=" checkbox">
-                  <input hidden="" type="checkbox" class="checkbox__input" name="checkbox-smeta">
-                </label></td>
+            <tr>
+
               <td class="dtr-control" tabindex="0">4</td>
               <td><span class="_doc-category">
                   Док
@@ -301,35 +228,37 @@
               <td class="sorting_1">Грузовая газель</td>
               <td>метры</td>
               <td>50</td>
-              <td><button type=" button" class=" btn-del-small"></button></td>
+              <td><button type=" button" data-toggle="modal" data-target="#modal-lg" class=" btn-edit"></button></td>
+              <td><button type=" button" onclick="deleteItemPL(event)" class=" btn-del-small"></button></td>
             </tr>
-            <tr class="odd">
-              <td><label class=" checkbox">
-                  <input hidden="" type="checkbox" class="checkbox__input" name="checkbox-smeta">
-                </label></td>
+            <tr>
+
               <td class="dtr-control" tabindex="0">5</td>
               <td><span class="_mat-category">Мат</span></td>
               <td class="">01232</td>
               <td class="sorting_1">Доски струганые половые</td>
               <td>метры</td>
               <td>60</td>
-              <td><button type=" button" class=" btn-del-small"></button></td>
+              <td><button type=" button" data-toggle="modal" data-target="#modal-lg" class=" btn-edit"></button></td>
+              <td><button type=" button" onclick="deleteItemPL(event)" class=" btn-del-small"></button></td>
             </tr>
-            <tr class="even">
-              <td><label class=" checkbox">
-                  <input hidden="" type="checkbox" class="checkbox__input" name="checkbox-smeta">
-                </label></td>
+            <tr>
+
               <td class="dtr-control" tabindex="0">6</td>
               <td><span class="_rab-category">Раб</span></td>
               <td class="">01232</td>
               <td class="sorting_1">Монтаж теплого пола</td>
               <td>метры</td>
               <td>100</td>
-              <td><button type=" button" class=" btn-del-small"></button></td>
+              <td><button type=" button" data-toggle="modal" data-target="#modal-lg" class=" btn-edit"></button></td>
+              <td><button type=" button" onclick="deleteItemPL(event)" class=" btn-del-small "></button></td>
             </tr>
           </tbody>
 
         </table>
+
+        <button type="button" class="butt-plus  mt-3" onclick="creatingItemPL()"><span>Этап
+            работ</span></button>
 
       </div>
 
@@ -337,73 +266,81 @@
     </div>
 
   </div>
+  <!-- Начало Модлаьно окно -->
+  <div class="modal fade" id="modal-lg" style="display: none;" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title">Large Modal</h4>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">×</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <p>One fine body…</p>
+        </div>
+        <div class="modal-footer justify-content-between">
+          <button type="button" class="butt" data-dismiss="modal">Отмена</button>
+          <button type="button" class="butt-success">Сохранить</button>
+        </div>
+      </div>
 
+    </div>
+
+  </div>
+  <!-- Конец Модлаьно окно -->
 
   <!-- jQuery -->
-  <script src="./plugins/jquery/jquery.min.js"></script>
-  <!-- Bootstrap 4 -->
-  <script src="./public/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="./public/plugins/datatables/jquery.dataTables.min.js"></script>
-  <script src="./public/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
-  <script src="./public/plugins/datatables-responsive/js/dataTables.responsive.min.js"></script>
-  <script src="./public/plugins/datatables-responsive/js/responsive.bootstrap4.min.js"></script>
-  <script src="./public/plugins/datatables-buttons/js/dataTables.buttons.min.js"></script>
-  <script src="./public/plugins/datatables-buttons/js/buttons.bootstrap4.min.js"></script>
-  <!-- jQuery UI 1.11.4 -->
-  <script src="./public/plugins/jquery-ui/jquery-ui.min.js"></script>
-  <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
-  <script>
-    $.widget.bridge('uibutton', $.ui.button)
-  </script>
-  <!-- Bootstrap4 Duallistbox -->
-  <script src="./public/plugins/bootstrap4-duallistbox/jquery.bootstrap-duallistbox.min.js"></script>
+  <script src="../plugins/jquery/jquery.min.js"></script>
 
-  <script src="./public/plugins/moment/moment.min.js"></script>
-  <script src="./public/plugins/inputmask/jquery.inputmask.min.js"></script>
-  <script src="./public/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
-  <script src="./public/plugins/bootstrap-switch/js/bootstrap-switch.min.js"></script>
-  <script src="./public/plugins/bs-stepper/js/bs-stepper.min.js"></script>
+  <!-- Bootstrap 4 -->
+  <script src="../public/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="../public/plugins/datatables/jquery.dataTables.min.js"></script>
+  <script src="../public/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
+  <script src="../public/plugins/datatables-responsive/js/dataTables.responsive.min.js"></script>
+  <script src="../public/plugins/datatables-responsive/js/responsive.bootstrap4.min.js"></script>
+  <script src="../public/plugins/datatables-buttons/js/dataTables.buttons.min.js"></script>
+  <script src="../public/plugins/datatables-buttons/js/buttons.bootstrap4.min.js"></script>
+  <!-- jQuery UI 1.11.4 -->
+  <script src="../public/plugins/jquery-ui/jquery-ui.min.js"></script>
+  <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
+
+  <!-- Bootstrap4 Duallistbox -->
+  <script src="../public/plugins/bootstrap4-duallistbox/jquery.bootstrap-duallistbox.min.js"></script>
+
+  <script src="../public/plugins/moment/moment.min.js"></script>
+  <script src="../public/plugins/inputmask/jquery.inputmask.min.js"></script>
+  <script src="../public/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
+  <script src="../public/plugins/bootstrap-switch/js/bootstrap-switch.min.js"></script>
+  <script src="../public/plugins/bs-stepper/js/bs-stepper.min.js"></script>
   <!-- JQVMap -->
   <!-- <script src="./public/plugins/jqvmap/jquery.vmap.min.js"></script>
   <script src="./public/plugins/jqvmap/maps/jquery.vmap.usa.js"></script> -->
   <!-- jQuery Knob Chart -->
-  <script src="plugins/jquery-knob/jquery.knob.min.js"></script>
+  <script src="../plugins/jquery-knob/jquery.knob.min.js"></script>
   <!-- daterangepicker -->
 
 
-  <script src="./public/plugins/daterangepicker/daterangepicker.js"></script>
+  <script src="../public/plugins/daterangepicker/daterangepicker.js"></script>
 
   <!-- Tempusdominus Bootstrap 4 -->
   <!-- overlayScrollbars -->
   <!-- <script src="./public/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script> -->
 
   <!-- Summernote -->
-  <script src="./public/plugins/summernote/summernote-bs4.min.js"></script>
+  <script src="../public/plugins/summernote/summernote-bs4.min.js"></script>
   <!-- AdminLTE App -->
   <script src="../dist/js/adminlte.min.js?v=3.2.0"></script>
   <!-- AdminLTE for demo purposes -->
   <!-- <script src="./public/dist/js/demo.js"></script> -->
   <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-  <script src="./public/dist/js/pages/dashboard.js"></script>
-  <script type="module" src="/src/assets/js/main.js"></script>
+  <script src="../public/dist/js/pages/dashboard.js"></script>
 
-  <script>
-    $(function () {
-      $("#example1").DataTable({
-        "responsive": true, "lengthChange": false, "autoWidth": false,
 
-      }).buttons().container().appendTo('#example1_wrapper .col-md-6:eq(0)');
-      $('#example2').DataTable({
-        "paging": false,
-        "lengthChange": false,
-        "searching": true,
-        "ordering": true,
-        "info": false,
-        "autoWidth": false,
-        "responsive": true,
-      });
-    });
-  </script>
+
+  <script type="module" src="../src/assets/js/main.js"></script>
+
+
 </body>
 
 </html>
