--- a/pages/price-list.html
+++ b/pages/price-list.html
@@ -106,21 +106,21 @@
 
                   </li>
                   <li class="nav-item">
-                    <a href="./page-price-list.html" class="nav-link _active-page font-weight-bold _icon-priceList">
+                    <a href="./price-list.html" class="nav-link _active-page font-weight-bold _icon-priceList">
 
                       <p> Прайс-лист</p>
 
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a href="#" class="nav-link font-weight-bold _icon-client">
+                    <a href="./templates.html" class="nav-link font-weight-bold _icon-client">
 
                       <p> Клиенты</p>
 
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a href="#" class="nav-link font-weight-bold _icon-pattern">
+                    <a href="templates.html" class="nav-link font-weight-bold _icon-pattern">
                       <p>
 
                         Шаблоны
