fix поправил слект

--- a/pages/create-template.html
+++ b/pages/create-template.html
@@ -185,10 +185,9 @@
 										<div class="accordion__name"> </div>
 										<div class="accordion__select ">
 											<label class="accordion__name-select">Статус</label>
-											<div class="select-status">
+											<div class="select-status py-2">
 												<select class="select2  select2-hidden-accessible" name="Статус"
-													style="width: 100%;" data-select2-id="select-status-" tabindex="-1"
-													aria-hidden="true">
+													data-select2-id="select-status" tabindex="-1" aria-hidden="true">
 													<option value="Выполнено" class="select-status__completed">Выполнено</option>
 													<option selected value="В работе" class="select-status__in-progress">В работе
 													</option>
